# Hacktopus

./: README.md  main.py  pyproject.toml
Docs/: concept.md
docs/: concept.md
flows/: example.yaml  example.yml  example_child_flow.yaml  example_exec.yaml  example_exec_child.yaml  example_sub_child_flow.yaml  example_sub_sub_child_flow.yaml
src/cli/: click_cli.py
src/data_classes/: file_handler.py  flow.py  flow_data_handler.py  flowfile.py  stage.py  task.py
src/execution/: stage_executer.py
src/file_converter/: yaml_to_json.py
src/flow/: builder.py  convert_alias_to_cmd.py  file_parser.py  flow_file_parser.py  gather_child_flows.py  parser.py
src/utils/: flow_helper.py
tools/arjun/: aliases.yaml
tools/paramspider/: aliases.yaml
